syntax = "proto3";

import "common/ComponentRequest.proto";
import "threerecommendhorizontal/ThreeRecommendHorizontalResponse.proto";

option java_package = "cn.migu.selection.proto.threerecommendhorizontalservice";
option java_outer_classname = "_ThreeRecommendHorizontalResponse";
option java_generic_services = true;

service ThreeRecommendHorizontalService{
rpc getThreeRecommendForHorizontal (ComponentRequest) returns (ThreeRecommendHorizontalResponse);
}